@@ -109,3 +109,6 @@ Changes between Qt3 and Qt4 port (to be completed)
     - added fix into the run-simple.sh and run-developer.sh scripts; for installs in the PATH,
         this should not be needed
 - fixed loading PIC program through the toolbar button; in property editor it works
+- fixed converting C program to Assembly/Hex. Note that need to enable in GPLink options "Link with shared libs"
+    error with __sdcc_gsinit_startup
+    note: sdcc is broken in Debian/Ubuntu for PICs: https://bugs.launchpad.net/ubuntu/+source/sdcc/+bug/1077918
